k8s/dnd-generator/dnd-generator.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dnd-generator

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dnd-generator-api
  namespace: dnd-generator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dnd-generator-api
  template:
    metadata:
      labels:
        app: dnd-generator-api
    spec:
      imagePullSecrets:
      - name: ghcr-token
      containers:
      - name: api
        image: ghcr.io/rssnyder/dnd-generator-api:0.0.1-beta.2
        imagePullPolicy: IfNotPresent
        ports:
        - name: api
          containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: dnd-generator-api
  namespace: dnd-generator
  annotations:
    tailscale.com/expose: "true"
    tailscale.com/hostname: "dnd-generator"
spec:
  type: LoadBalancer
  selector:
    app: dnd-generator-api
  ports:
  - name: api
    port: 80
    targetPort: api

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dnd-generator-api
  namespace: dnd-generator
spec:
  ingressClassName: nginx
  rules:
    - host: dnd-generator.k8s.rileysnyder.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  dnd-generator-api
                port:
                  number: 80
